# rpi-temp-control

./: .gitignore  README.md
meta-tempmonitor/: README
meta-tempmonitor/conf/: layer.conf
meta-tempmonitor/recipes-app/temp-monitor/: temp-monitor-wifi_1.0.bb  temp-monitor_1.0.bb  temp_monitor-wifi_1.0.bb  temp_monitor_1.0.bb
meta-tempmonitor/recipes-app/temp-monitor/files/: temp-monitor.service  wpa_supplicant@wlan0.service
meta-tempmonitor/recipes-app/temp-monitor/files/temp-monitor/: CMakeLists.txt
meta-tempmonitor/recipes-app/temp-monitor/files/temp-monitor/include/temp-monitor/core/: control_loop.h
meta-tempmonitor/recipes-app/temp-monitor/files/temp-monitor/src/core/: control_loop.c  cpu_temp.c  led_control.c  main.c
meta-tempmonitor/recipes-core/images/: temp-monitor-image.bb
temp-monitor/: CMakeLists.txt  premake5.lua
temp-monitor/include/temp-monitor/core/: control_loop.h  cpu_temp.h  led_control.h  led_gpio.h
temp-monitor/src/core/: control_loop.c  control_loop.cpp  cpu_temp.c  cpu_temp.cpp  led_control.c  led_gpio.cpp  main.c  main.cpp
